12월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Poland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Poland_l_english.yml
@@ -1,18 +1,18 @@
-﻿l_english:
+l_english:
 
 ### Ideas ###
 Held_Elections:0 "Recently Held Elections"
 Held_Elections_desc:0 "The Sejm has recently held public elections, and will not do so for another 4 years."
 Funding_UKR_Partisans:0 "Funding partisans in Poland"
-sell_bucovina:0 "Sold Bucovina"
-buy_bucovina:0 "Bought Bucovina"
-romanian_oil:0 "Romanian Oil"
-romanian_oil_to_poland:0 "Sending Oil to Poland"
+sell_bucovina:0 "부코비나 매각"
+buy_bucovina:0 "부코비나 매입"
+romanian_oil:0 "루마니아산 석유"
+romanian_oil_to_poland:0 "폴란드에 석유를 보냄"
 POL_opportunism_idea:0 "New Polish Opportunism"
 POL_opportunism_idea_desc:0 "We must always be ready to strike, to take advantage of the turmoil around us so as to ensure Poland comes out on top."
-POL_black_monday:0 "Effects of Black Monday"
+POL_black_monday:0 "검은 월요일의 효과"
 POL_black_monday_desc:0 "Germany's Black Monday has also affected our country. We have to act."
-POL_black_monday1:0 "Effects of Black Monday"
+POL_black_monday1:0 "검은 월요일의 효과"
 POL_black_monday1_desc:0 "Germany's Black Monday has also affected our country. We have to act."
 POL_eternal_regency:0 "Eternal Regency"
 POL_eternal_regency_desc:0 "Poland's Regency council, initially created to decide upon the new King of Poland, has been bloated and ineffective for almost two decades. The strain this has on the small Polish nation is reaching a breaking point."
@@ -586,57 +586,41 @@ poland.42.t:0 "Cabinet Crisis"
 poland.42.d:0 "In December 1937 'Kurier Warszawski', one of the most influential newspapers in Poland, published a number of articles accusing a few members of current cabinet of stealing public funds. An investigation into the matter has proven the accusation as correct. King Karol Olbracht von Hapsburg will likely use this opportunity to change the cabinet and place his protégé from Galicia, Hieronim Tarnowski, as the new Prime Minister."
 poland.42.a:0 "Hieronim Tarnowski will form the new government."
 poland.42.b:0 "Keep the current government."
+poland.42.b:0 "The Prime Minister must be replaced."
 poland.43.t:0 "Appointing a Prime Minister"
 poland.43.d:0 "After a government crisis, the position of Prime Minister is empty and the King needs to appoint a new one."
 poland.43.a:0 "Leopold Skulski, the Conservative leader."
 poland.43.b:0 "Archbishop A. Kakowski, the Primate of Poland."
 poland.43.c:0 "Zdzislaw Lubomirski, the former leader of the Regency Council."
 poland.43.e:0 "General Wladyslaw Sikorski."
-poland.44.t:0 "The Sejm Elections"
-poland.44.d:0 "As stated in our Constitution, elections for the Sejm must be held every four years. There are only three major parties that have a chance of gaining a majority, who will it be?"
-poland.44.a:0 "The Patriotic Party."
-poland.44.b:0 "The People's Coalition."
-poland.44.c:0 "National-Radical Party."
-poland.44.e:0 "The Syndicalist Party."
-poland.45.t:0 "The Sejm Elections"
+poland.45.t:0 "The [GetYear] Sejm Elections"
 poland.45.d:0 "As stated in our Constitution, elections for the Sejm must be held every four years. There are only three major parties that have a chance of gaining a majority, who will it be?"
 poland.45.a:0 "The Patriotic Party."
 poland.45.b:0 "The People's Coalition."
 poland.45.c:0 "National-Radical Party."
 poland.45.e:0 "The Syndicalist Party."
-poland.46.t:0 "The Sejm Elections"
+poland.46.t:0 "The [GetYear] Sejm Elections"
 poland.46.d:0 "As stated in our Constitution, elections for the Sejm must be held every four years. There are only three major parties that have a chance of gaining a majority, who will it be?"
 poland.46.a:0 "The King shall put an end to this chaos."
-poland.46.b:0 "The Patriotic Party."
+poland.46.b:0 "The Monarchist Party."
 poland.46.c:0 "The Democratic Party."
 poland.46.e:0 "The People's Coalition."
-poland.47.t:0 "The Sejm Elections"
+poland.47.t:0 "The [GetYear] Sejm Elections"
 poland.47.d:0 "As stated in our Constitution, elections for the Sejm must be held every four years. There are only three major parties that have a chance of gaining a majority, who will it be?"
-poland.47.a:0 "The Patriotic Party."
+poland.47.a:0 "The Monarchist Party."
 poland.47.b:0 "The Democratic Party."
 poland.47.c:0 "The People's Coalition."
-poland.48.t:0 "The Sejm Elections"
+poland.48.t:0 "The [GetYear] Sejm Elections"
 poland.48.d:0 "As stated in our Constitution, elections for the Sejm must be held every four years. There are only three major parties that have a chance of gaining a majority, who will it be?"
 poland.48.a:0 "The King shall put an end to this chaos."
-poland.48.b:0 "The Patriotic Party."
+poland.48.b:0 "The Monarchist Party."
 poland.48.c:0 "The Democratic Party."
 poland.48.e:0 "The People's Coalition."
-poland.49.t:0 "The Sejm Elections"
+poland.49.t:0 "The [GetYear] Sejm Elections"
 poland.49.d:0 "As stated in our Constitution, elections for the Sejm must be held every four years. There are only three major parties that have a chance of gaining a majority, who will it be?"
-poland.49.a:0 "The Patriotic Party."
+poland.49.a:0 "The Monarchist Party."
 poland.49.b:0 "The Democratic Party."
 poland.49.c:0 "The People's Coalition."
-poland.50.t:0 "The Sejm Elections"
-poland.50.d:0 "As stated in our Constitution, elections for the Sejm must be held every four years. There are only three major parties that have a chance of gaining a majority, who will it be?"
-poland.50.a:0 "The Patriotic Party."
-poland.50.b:0 "The Democratic Party."
-poland.50.c:0 "The People's Coalition."
-poland.51.t:0 "The Sejm Elections"
-poland.51.d:0 "As stated in our Constitution, elections for the Sejm must be held every four years. There are only three major parties that have a chance of gaining a majority, who will it be?"
-poland.51.a:0 "The King shall put an end to this chaos."
-poland.51.b:0 "The Patriotic Party."
-poland.51.c:0 "The Democratic Party."
-poland.51.e:0 "The People's Coalition."
 poland.52.t:0 "Comrade Dzierzynski Passes Away"
 poland.52.d:0 "The famous leader of our revolution and leader of our country, Feliks Dzierzynski, died of a heart attack today in Warsaw, immediately after a two-hour long speech to the Central Committee of the Party. Who will replace him?"
 poland.52.a:0 "Karol Radek takes over."
@@ -1199,7 +1183,7 @@ poland.211.t:0 "The Fate of the Royal Castle"
 poland.211.d:0 "Constructed in 1598 as the seat of power for Sigismund III, the Royal Castle in Warsaw has stood as the seat of Polish Kings for hundreds of years. But now, as the country has thrown off the shackles of Monarchist oppression, the Castle sits as a blight upon the worker's paradise that is Warsaw. \n\nMany proposals have been put forth on how to deal with this eyesore, but only one can be chosen."
 poland.211.a:0 "Redesign it to serve the Syndicalist government."
 poland.212.t:0 "Monarchist Train Bombing"
-poland.212.d:0 "Late last night a train arriving in Lublin was rocked by a large explosion which destroyed the railway and several train cars. While no civilians were hurt in the explosion, anti-government slogans were found painted on the side of the train, alongside messages praising the old Kingdom.\n\nLocal newspapers have already begun running stories on the "Monarchist Menace".  It seems that the Monarchist faction is growing more bold in their actions."
+poland.212.d:0 "Late last night a train arriving in Lublin was rocked by a large explosion which destroyed the railway and several train cars. While no civilians were hurt in the explosion, anti-government slogans were found painted on the side of the train, alongside messages praising the old Kingdom.\n\nLocal newspapers have already begun running stories on the "Monarchist Menace". It seems that the Monarchist faction is growing more bold in their actions."
 poland.212.a:0 "We must deal with these Monarchists."
 poland.213.t:0 "Monarchist Assassination"
 poland.213.d:0 "Today on his way home from a long political meeting, the local governor in Lodz was killed by a small bomb being thrown at his vehicle. The bomb killed both the governor and his driver, and caused panic throughout the city. The assailant was heard shouting pro-Monarchist slogans as he disappeared into the crowds. Local police have been unable to identify the attacker, despite a hours-long search."
@@ -1234,6 +1218,17 @@ poland.222.a:0 "A fantastic achievement."
 poland.223.t:0 "Expansion of Polskie Radio S.A. - Warsaw II"
 poland.223.d:0 "Continuing the expansion of their national radio network, Polskie Radio S.A. has today begun broadcasting from their second permanent radio station in Warsaw, bringing their total number of stations to five. These stations and their coverage of Poland proper ensure that Polish radio broadcasts reach Polish people all across Europe, even crossing national boundaries."
 poland.223.a:0 "The Polish voice knows no bounds."
+poland.224.t:0 "Cabinet Crisis"
+poland.224.d:0 "In December 1937 'Kurier Warszawski', one of the most influential newspapers in Poland, published a number of articles accusing a few members of current cabinet of stealing public funds. An investigation into the matter has proven the accusation as correct. King [GetLeader] will likely use this opportunity to change the cabinet as he sees fit, and gain more control over the government's policies."
+poland.224.a:0 "Keep the current government."
+poland.224.b:0 "The Prime Minister must be replaced."
+poland.225.t:0 "Deposition of the King's Brother"
+poland.225.d:0 "Rising on a swelling tide of populist action, the "Red Hetman", as he is being called by the unwashed masses, Nikita Krushchev, has moved to depose the current ruler of Ukraine, Vasily I. Normally events in Ukraine would not concern the Polish crown, however, Vasily I was the brother of the current king of Poland, Karl Albrecht. Obviously such an aggressive action against the king's own brother is an outrage, and one we must deal with immediately."
+poland.225.a:0 "We will not forget this."
+poland.225.b:0 "This is an outrage! War!"
+poland.226.t:0 "War with Germany!"
+poland.226.d:0 "The time has come, for one of our greatest foes has come bearing down upon us once more. Germany, ever an enemy of the Polish people, now stands fimrly opposite us on the battlefield, ready to take all we hold dear. It is time for the greatest fight of our generation, where we decide the fate of Poland for generations to come."
+poland.226.a:0 "We will fight to the bitter end."
 
 ### Global Flags ###
 POL_REPUBLIC:0 "Declared the Polish Republic"
@@ -1261,6 +1256,8 @@ UKR_RUSCOUP:0 "Russian Coup in Ukraine"
 russ_gives_passports:0 "Russian-Ukrainian Passports"
 POL_PRUSSIANPARTITION:0 "Laid Claim to the Prussian Partition"
 POL_must_own_coast:0 "You must own a port for this focus to have an effect."
+POL_KILLED_BROTHER:0 "Deposed the King's Brother"
+POL_UNDER_GER:0 "Poland is under German rule."
 
 ### Political Parties ###
 POL_totalist_party:0 "PWR"
@@ -1283,13 +1280,16 @@ POL_paternal_autocrat_party:0 "PC"
 POL_paternal_autocrat_party_long:0 "Partia Centralistyczna"
 POL_national_populist_party:0 "ZLN"
 POL_national_populist_party_long:0 "Związek Ludowo-Narodowy"
-### Try to use ONR eventually
+# Try to use ONR eventually
 
 ### Special Parties ###
 POL_paternal_autocrat_military_party:0 "BBWR"
 POL_paternal_autocrat_military_party_long:0 "Bezpartyjny Blok Współpracy z Rządem"
 POL_totalist_roza_party:0 "SDKP"
 POL_totalist_roza_party_long:0 "Socjaldemokracja Królestwa Polskiego"
+
+### Leader Descriptions ###
+POLITICS_POL_REGENCY_DESC:0 "Poland was reestablished by the Central Powers in formerly Russian lands after over a century of foreign rule. Competition between Austria and Germany for influence in Poland, both during and since the Weltkrieg has left the regency council unable to perform its principle duty, the selection of a new monarch. The, so called, 'eternal regency' lords indecisively over a Poland which remains much the same as it was before the Weltkrieg - poor and restless."
 
 ### Research ###
 german_research_name:0 "Kaiser Wilhelm Society"
