12월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Qing_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Qing_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
 
 ### Focuses ###
 QIE_army_effort:0 "Restructure the Imperial Army"
@@ -94,15 +94,15 @@ QIE_collectivist_ethos_kr_desc:0 "We seek to unite all of China under our banner
 QIE_militarism:0 "Militarism"
 QIE_militarism_desc:0 "Those who view the military as a necessary evil are doomed to hesitate in the face of war. We will ingrain militarism into our culture to become a people of soldiers with blind devotion to our Imperial Leader."
 QIE_military_youth:0 "Emperor's Faithful"
-QIE_military_youth_desc:0 "Organisations to promote discipline and devotion to the Emperor above all will be key in securing our role within the future of Asia"."
+QIE_military_youth_desc:0 "Organisations to promote discipline and devotion to the Emperor above all will be key in securing our role within the future of Asia."
 QIE_ideological_fanaticism:0 "Ideological Fanaticism"
 QIE_ideological_fanaticism_desc:0 "Our emperor and our goal of a China ruled by it's people is our ultimate cause. Any follower should be prepared to face death, and those who stray better be prepared to face death."
 QIE_liberty_ethos_kr:0 "United Benevolence"
 QIE_liberty_ethos_kr_desc:0 "While we do seek to unite China under our banner, we must not forget what makes us who we are and to treat our subjects with both kindness and respect"
 QIE_rights_of_man:0 "The Rights Of our Subjects"
-QIE_rights_of_man_desc:0 "The Populace have been wary of our rule ever since the Kaiser restored us to power. We should seek to preserve and expand the rights of all our Subjects". "
+QIE_rights_of_man_desc:0 "The Populace have been wary of our rule ever since the Kaiser restored us to power. We should seek to preserve and expand the rights of all our Subjects."
 QIE_liberty_research:0 "University Grants"
-QIE_liberty_research_desc:0 "We must further develop our internal science and high-skilled industries, to do this we should provide grants for their tuition to the most capable in return for their skills and expertise." "
+QIE_liberty_research_desc:0 "We must further develop our internal science and high-skilled industries, to do this we should provide grants for their tuition to the most capable in return for their skills and expertise."
 QIE_generic_welfare:0 "Farming Subsidiaries"
 QIE_generic_welfare_desc:0 "Our farmers are the lifeblood of our nation yet they struggle to survive on their meagre income. We should immediately provide extra funding to ensure they can continue to grow what our Proud Nation consumes"
 QIE_generic_national_identity:0 "Chinese Identity"
@@ -321,7 +321,7 @@ qing.12.a:0 "Open the Chinese Market to the world"
 qing.12.b:0 "Let us focus on the Chinese Market"
 qing.12.c:0 "Germany is still our preferred partner"
 qing.13.t:0 "Walther Stennes Modernisation Program"
-qing.13.d:0 "If China is to be great we should adopt German practices. Of all the nations of the world Germany has a thousand times proven itself to be the greatest empire of them all. We Chinese should march like germans to be part of this new world empire, and Stennes is the bullheaded man who will lead us towards this goal. German organised factories will be built, and local administrators will be required to learn the German work ethic. All these reforms will surely bring China towards the modern era, however there is likely to be some dissent. Perhaps we should reform slowly and take lesson from the Corporate organisation in the South."
+qing.13.d:0 "If China is to be great we should adopt German practices. Of all the nations of the world Germany has a thousand times proven itself to be the greatest empire of them all. We Chinese should march like Germans to be part of this new world empire, and Stennes is the bullheaded man who will lead us towards this goal. German organised factories will be built, and local administrators will be required to learn the German work ethic. All these reforms will surely bring China towards the modern era, however there is likely to be some dissent. Perhaps we should reform slowly and take lesson from the Corporate organisation in the South."
 qing.13.a:0 "Walther Stennes will show the Chinese how to work!"
 qing.13.b:0 "Perhaps we should move slower, and copy the A.O.G."
 qing.14.t:0 "Wang Kemin will develop China through righteous industrialisation!"
@@ -338,7 +338,7 @@ qing.16.t:0 "Peasant troubles"
 qing.16.d:0 "As Pu Yi decided not to offer any reforms, the Shangqing collaborators spread around the countryside whispering of the end of the Dynasty."
 qing.16.a:0 "Find them and execute them!"
 qing.17.t:0 "Destroying the Shangqing Forts"
-qing.17.d:0 "The Shangqing were destroyed by our invincible army, but in some parts of their state the forts remained everywhere. These are useless for us but some rebels will use them - against us."
+qing.17.d:0 "We have successfully dealt with the Shanqing, but in some parts of their state the forts remained everywhere. These are useless for us but some rebels will use them - against us."
 qing.17.a:0 "Destroy them!"
 qing.18.t:0 "Intelectualls demand constitutional monarchy!"
 qing.18.d:0 "Various intellectual circles in Beijing and other major cities have issued a petition to the Emperor to install constitutional monarchy. This move is dangerous as it can weaken our stability. Nearly everyone in the court is opposed to this move, from various reasons, mostly from fears about internal stability. We have no other choice."
@@ -386,7 +386,7 @@ qing.30.t:0 "Chinese New Year, Dog"
 qing.30.d:0 "Today, February 1st begins the seven day long celebrations of the Chinese New Year. This year will be the year of the Dog. Dog people are honest, faithful and sincere. They respect tradition and value honour, and enjoy helping people. The Dog is very righteous, and always is the first to speak out against injustice. He is not good at socialising with friends, and rarely shines in company, but he is intelligent, caring and a good listener."
 qing.30.a:0 "Prepare the celebrations and the stage!"
 qing.31.t:0 "Chinese New Year, Pig"
-qing.31.d:0 "Today, January 21th begins the seven day long celebrations of the Chinese New Year. This year will be the year of the Pig. Pigs are models of sincerity, purity, tolerance, and honour. When you first meet them, Pigs seem too good to be true. They are careful and caring, obliging and chivalrous. Put your trust in him, he won't let you down and he will never try to. The Pigs simply want to do everything right.
+qing.31.d:0 "Today, January 21th begins the seven day long celebrations of the Chinese New Year. This year will be the year of the Pig. Pigs are models of sincerity, purity, tolerance, and honour. When you first meet them, Pigs seem too good to be true. They are careful and caring, obliging and chivalrous. Put your trust in him, he won't let you down and he will never try to. The Pigs simply want to do everything right."
 qing.31.a:0 "Prepare the celebrations and the stage!"
 qing.32.t:0 "Chinese New Year, Rat"
 qing.32.d:0 "Today, February 9th begins the seven day long celebrations of the Chinese New Year. This is an especially important New Year because it begins a new sixty year cycle, starting with the year of the Rat. Rat people are born under the sign of charm and aggressiveness. They are expressive and can be talkative sometimes. They like to go to parties and spend quiet times chatting with their friends. Although the Rat can be quiet sometimes, it is rare to catch a Rat sitting quietly."
@@ -632,7 +632,7 @@ qing.92.a:0 "Agree to come to table"
 qing.92.b:0 "Refuse, Xibei belongs to us!"
 qing.93.t:0 "What should we bring to the table"
 qing.93.d:0 "The representative of Mongolia has agreed to meet with Pu Yi to discuss terms. What should we ask for?"
-qing.93.a:0 "Negotiate over the everything but what they claim"
+qing.93.a:0 "Negotiate over everything aside from what they claim"
 qing.93.b:0 "Split the country"
 qing.93.c:0 "We want all of our lands!"
 qing.94.t:0 "Mongolia Refuses"
