12월 업데이트

--- a/Kaiserreich Korean Translation/localisation/KR_Soviet_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Soviet_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
 
 ### Ideas ###
 SOV_COL_END:0 "Agrarian Workerhood"
@@ -30,6 +30,7 @@ SOV_REC:0 "인정된 독립"
 SOV_IDE:0 "이념적 차이"
 SOV_FRI:0 "소비에트-미국 협력 조약"
 SOV_POL:0 "폴란드 비즈니스"
+SOV_civil_war:0 "러시아 내전"
 
 ### Ideologies ###
 SOV_totalist:0 "소비에트 공화국"
@@ -457,12 +458,12 @@ sovf.64.t:0 "The Soviets wants to join us!"
 sovf.64.d:0 "The Soviet ambassador in Paris have placed a former offer from the Soviet government to join the Syndicalist international in the effort against Imperialism. How should we respond?"
 sovf.64.a:0 "동지여 환영합니다!"
 sovf.64.b:0 "We're fine as it is. Refuse."
-sovf.65.t:0 "The French refuse!"
+sovf.65.t:0 "The French Refuse!"
 sovf.65.d:0 "The French refused our offer to join the Syndicalist International!"
 sovf.65.a:0 "Fine! We'll make our own International. With Borscht, and war bears!"
-sovf.66.t:0 "The second Weltkrieg"
+sovf.66.t:0 "The Second Weltkrieg"
 sovf.66.d:0 "The tense peace in Europe have finally been broken, and a great war between the Syndicalist international and Germany have broken out. This is a great opportunity to regain our lands in eastern Europe. Should we join or friends in France, or should we strike the Germans on our own?"
-sovf.66.a:0 "We don't need the French. Long live the fourth international!"
+sovf.66.a:0 "We don't need the French. Long live the Fourth International!"
 sovf.66.b:0 "Offer France our support in the fight against Germany!"
 sovf.67.t:0 "The Fate of Poland"
 sovf.67.d:0 "With the former state of Poland finally crushed by the glorious Red Army the time has come to decide its fate. Shall we reincorporate it once more into our motherland or shall we preserve Polish independence under our supervision?"
@@ -470,43 +471,43 @@ sovf.67.a:0 "Restore independent Poland!"
 sovf.67.b:0 "Integrate them!"
 sovf.68.t:0 "Integration of Poland"
 sovf.68.d:0 "The areas of the former state of Poland are now firmly integrated into our growing socialist motherland."
-sovf.69.t:0 "Soviet expansionism threatens Poland"
+sovf.69.t:0 "Soviet Expansionism Threatens Poland"
 sovf.69.d:0 "The recent resurgence of the Soviet state in the east together with recent soviet diplomatic activity through the eastern Europe proves, that in order to keep our state, its independence and its borders intact, we need to gain protection of German Empire and Mitteleuropa alliance. However, doing will mean definite military involvement of our state in any potential conflict in the Western Europe and may further worsen our relations with Soviet Russia. What shall we do?"
-sovf.69.a:0 "Ask the German Empire for protection"
+sovf.69.a:0 "Ask the German Empire for Protection"
 sovf.69.b:0 "We don't need any allies"
 sovf.70.t:0 "Poland wants to join Mitteleuropa"
 sovf.70.d:0 "The government of Poland, afraid of recent aggressive soviet foreign policy has announced recently that they want to join Mitteleuropa alliance. It's not a sudden move because pro-German policy is popular in many circles including the ruling cabinet and army. Do we want to allow Poland to join our alliance and protect them from potential Bolshevik diplomatic and economic offensive?"
 sovf.70.a:0 "Accept their offer."
 sovf.70.b:0 "Stable relationship with Russia is more important."
-sovf.71.t:0 "Poland joins Mitteleuropa"
+sovf.71.t:0 "Poland Joins Mitteleuropa"
 sovf.71.d:0 "The Germans accepted the Polish offer and invited them into the Mitteleuropa alliance. Now Their independence and territorial integrity are protected by the powerful German armed forces."
 sovf.71.a:0 "Less than good."
 sovf.71.b:0 "Great!"
-sovf.72.t:0 "Soviet expansionism threatens Finland"
+sovf.72.t:0 "Soviet Expansionism Threatens Finland"
 sovf.72.d:0 "The recent resurgence of the Soviet state in the east together with recent soviet diplomatic activity through the eastern Europe proves, that in order to keep our state, its independence and its borders intact, we need to gain protection of German Empire and Mitteleuropa alliance. However, doing will mean definite military involvement of our state in any potential conflict in the Western Europe and may further worsen our relations with Soviet Russia. What shall we do?"
-sovf.72.a:0 "Ask German Empire for protection"
+sovf.72.a:0 "Ask the German Empire for protection"
 sovf.72.b:0 "We don't need any allies"
-sovf.73.t:0 "Finland wants to join Mitteleuropa"
+sovf.73.t:0 "Finland Wants to join Mitteleuropa"
 sovf.73.d:0 "The government of Finland, afraid of recent aggressive soviet foreign policy has announced recently that they want to join Mitteleuropa alliance. It's not a sudden move because pro-German policy is popular in many circles including the ruling cabinet and army. Do we want to allow Finland to join our alliance and protect them from potential Bolshevik diplomatic and economic offensive?"
 sovf.73.a:0 "Accept their offer."
 sovf.73.b:0 "Stable relationship with Russia is more important."
-sovf.74.t:0 "Finland joins Mitteleuropa"
+sovf.74.t:0 "Finland Joins Mitteleuropa"
 sovf.74.d:0 "The Germans accepted the Finnish offer and invited them into the Mitteleuropa alliance. Now Their independence and territorial integrity are protected by the powerful German armed forces."
 sovf.75.t:0 "Status of Karelia"
-sovf.75.d:0 "During the Russian civil war many rightful Russian lands were occupied by the Kingdom of Finland. The subsequent German intervention in the Russian civil war allowed Finland to keep those territories. Now that the attention of the German empire is turned westwards we can finally focus on regaining Karelia. We can either try to solve this matter diplomatically or use this opportunity as a pretext to finally integrate Finland into our state."
+sovf.75.d:0 "During the Russian Civil War many rightful Russian lands were occupied by the Kingdom of Finland. The subsequent German intervention in the Russian civil war allowed Finland to keep those territories. Now that the attention of the German empire is turned westwards we can finally focus on regaining Karelia. We can either try to solve this matter diplomatically or use this opportunity as a pretext to finally integrate Finland into our state."
 sovf.75.a:0 "Demand Karelia!"
 sovf.75.b:0 "Crush Finland!"
-sovf.76.t:0 "Soviet claims!"
+sovf.76.t:0 "Soviet Claims!"
 sovf.76.d:0 "Today, Vyacheslav Molotov has met with our Prime-Minister and announced that the Soviet state wants to take back Vyborg and a part of Karelia. They are offering us monetary and material compensation as well as a guarantee of the future state borders in return. How shall we react?"
 sovf.76.a:0 "Nyet Molotov!"
 sovf.76.b:0 "All right."
-sovf.77.t:0 "Finland refused!"
+sovf.77.t:0 "Finland Refused!"
 sovf.77.d:0 "The Kingdom of Finland has refused our generous offer to transfer Vyborg and a part of Karelia back to the motherland! We must take back our rightful lands by force!"
 sovf.77.a:0 "Take it back by force!"
-sovf.78.t:0 "Transfer of the territories"
+sovf.78.t:0 "Transfer of the Territories"
 sovf.78.d:0 "The Kingdom of Finland has agreed to transfer larger parts of Karelia in return for monetary and material compensation as well as the guaranteed security of their new borders!"
-sovf.78.a:0 "Another victory for Soviet diplomacy!"
-sovf.79.t:0 "The fate of Finland"
+sovf.78.a:0 "Another Victory for Soviet Diplomacy!"
+sovf.79.t:0 "The Fate of Finland"
 sovf.79.d:0 "With the rebellious state of Finland finally crushed by the glorious Red Army the time has come to decide its fate. Shall we reincorporate it once more into our motherland or shall we preserve Finnish independence under our supervision?"
 sovf.79.a:0 "Integrate Finland!"
 sovf.79.b:0 "Restore independent Finland"
@@ -515,15 +516,15 @@ sovf.80.d:0 "The areas of the former state of Finland are now firmly integrated 
 sovf.80.a:0 "Great!"
 sovf.81.t:0 "Integration of White Ruthenia"
 sovf.81.d:0 "The areas of the artificial state of White Ruthenia, created by the German Empire to weaken Russia, are now firmly integrated into our growing socialist motherland."
-sovf.82.t:0 "The integration of Ukraine"
+sovf.82.t:0 "The Integration of Ukraine"
 sovf.82.d:0 "The areas of the artificial state of Ukraine, created by the German Empire to weaken Russia, are now firmly integrated into our growing socialist motherland."
-sovf.83.t:0 "The integration of United Baltic Duchy"
+sovf.83.t:0 "The Integration of United Baltic Duchy"
 sovf.83.d:0 "The areas of the United Baltic Duchy, created by the German Empire to further weaken Russia, are now firmly integrated into our growing socialist motherland."
-sovf.84.t:0 "The integration of Lithuania"
+sovf.84.t:0 "The Integration of Lithuania"
 sovf.84.d:0 "The areas of the former state of Lithuania are now firmly integrated into our growing socialist motherland."
-sovf.85.t:0 "The integration of Bessarabia"
+sovf.85.t:0 "The Integration of Bessarabia"
 sovf.85.d:0 "The region of Bessarabia, once unlawfully occupied by Romania, is now firmly integrated into our growing socialist motherland."
-sovf.86.t:0 "The integration of Eastern Galicia"
+sovf.86.t:0 "The Integration of Eastern Galicia"
 sovf.86.d:0 "Eastern Galicia, once part of the Austro-Hungarian Empire, is now firmly integrated into our growing socialist motherland."
 
 ### Alliances ###
